--- a/style.css
+++ b/style.css
@@ -34,8 +34,11 @@ header {
   background: url("../img/Email.svg") no-repeat;
   padding-left: 2em;
 }
-<hr />
+hr {
+  margin: 0;
+}
+.rodapé {
+  background-color: var(--branco);
+  padding: 1em;
+}
 
-<footer class="rodapé">
-  <h2 class="rodapé__titulo">Grupo Alura</h2>
-</footer>
