--- a/style.css
+++ b/style.css
@@ -41,4 +41,21 @@ hr {
   background-color: var(--branco);
   padding: 1em;
 }
-
+.menu-acessibilidade{
+    position: fixed;
+    top:2rem;
+    right:20px;
+    z-index: 1000;
+} 
+.rotacao-botao{ 
+      transform: rotate(-90deg);
+      transform-origin: right center;
+}
+.opcoes-acessibilidade{
+    margin-top:10px;
+    display: flex;
+    flex-direction: column;
+}
+   .opcoes-acessibilidade button{
+    margin-bottom: 5px;
+}
